--- a/app/src/main/res/layout/news_layout.xml
+++ b/app/src/main/res/layout/news_layout.xml
@@ -1,51 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="8dp"
-    android:layout_margin="8dp"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="100dp"
+    android:layout_margin="8dp"
+    app:cardElevation="8dp">
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_gravity="center_vertical"
-        android:weightSum="10"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:orientation="horizontal"
+        android:weightSum="10">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/article_image"
-            android:layout_weight="2"
-            android:scaleType="centerCrop"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:scaleType="centerCrop" />
 
         <LinearLayout
-            android:orientation="vertical"
-            android:layout_weight="8"
-            android:layout_margin="8dp"
-            android:layout_gravity="center_vertical"
             android:layout_width="0dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_margin="8dp"
+            android:layout_weight="8"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/article_title"
-                android:textSize="18sp"
-                android:text="Title"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:textSize="18sp" />
 
             <com.github.curioustechizen.ago.RelativeTimeTextView
                 android:id="@+id/article_time"
-                android:textSize="14sp"
-                android:textStyle="italic"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:textStyle="italic">
 
             </com.github.curioustechizen.ago.RelativeTimeTextView>
         </LinearLayout>
-
 
 
     </LinearLayout>
